Add array access tests